--- a/styles/style.css
+++ b/styles/style.css
@@ -193,6 +193,7 @@ select {
         display: flex;
         justify-content: space-between;
             align-items: center;
+        padding-right: 300px;
     }
 
     header {
